--- a/Clase_10/Alumnos Estructuras (Agregado de modificacion)/Alumnos Estructuras.cbp
+++ b/Clase_10/Alumnos Estructuras (Agregado de modificacion)/Alumnos Estructuras.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Curso.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Curso.h" />
 		<Unit filename="alumnos.c">
 			<Option compilerVar="CC" />
 		</Unit>
